samples/_failures_safe/1761801484_cda7c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cdf5794.c: In function ‘main’:
./samples/SAFE/__tmp_4cdf5794.c:152:5: error: expected declaration or statement at end of input
  152 |     perform_dfs(&g, "F");
      |     ^~~~~~~~~~~
